WIP: add layout, sidebar, headerd

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -1,4 +1,6 @@
 @import "_variables";                 // preset variables including color, font, etc.
+@import "~antd/dist/antd.css";        // Ant Design
+@import "_partial/layout";
 
 body
   font-family: "PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑","Helvetica Neue",Helvetica,Arial,sans-serif;
