WIP: add pan and zoom

--- a/src/styles/_partial/workflow.styl
+++ b/src/styles/_partial/workflow.styl
@@ -4,16 +4,16 @@
     height: "calc(100vh - %s - 2*%s)" % (header-height main-padding)
     overflow-y: hidden
   .workflow-brick
-    flex: 1
+    flex: 2
     min-width: 260px
     border: 1px solid #eee
     .tree
       height: 100%
       overflow-y: scroll
   .workflow-stage
-    flex: 3
+    flex: 4
     border: 1px solid #eee
   .workflow-conf
     flex: 1
-    min-width: 260px
+    // min-width: 260px
     border: 1px solid #eee
