--- a/src/styles/_partial/table.styl
+++ b/src/styles/_partial/table.styl
@@ -1,8 +1,12 @@
-.toolbar
-  display: flex
-  margin-bottom: 20px
-  .toolbar-right
-    margin-left: auto
-  button
-    margin-right: 10px !important
-  
+.toolbar {
+  display: flex;
+  margin-bottom: 20px;
+
+  .toolbar-right {
+    margin-left: auto;
+  }
+
+  button {
+    margin-right: 10px !important;
+  }
+}
