--- a/src/styles/_variables.styl
+++ b/src/styles/_variables.styl
@@ -1,21 +1,24 @@
 // Config
 // support-for-ie = false
-vendor-prefixes = webkit moz ms official
-
+vendor-prefixes = webkit moz ms official;
 // Colors
-color-blue = #5C87FF
-color-background-dark = #001529
-
+color-blue = #5C87FF;
+color-background-dark = #001529;
 // Fonts
-font-family-default = PingFangSC-Regular, helvetica neue, hiragino sans gb, arial, microsoft yahei ui, microsoft yahei, simsun, sans-serif
-font-family-code = Hack, source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace
-font-size = 14px
-
+font-family-default = PingFangSC-Regular, helvetica neue, hiragino sans gb, arial, microsoft yahei ui, microsoft yahei, simsun, sans-serif;
+font-family-code = Hack, source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+font-size = 14px;
 // Layout
-header-height = 64px
-sidebar-width = 220px
-main-padding = 24px
-
+header-height = 64px;
+sidebar-width = 220px;
+main-padding = 24px;
 // Z-index
-z-index-header = 999
-
+z-index-header = 999;
+// Workflow Node
+workflow-node-font-size = 16px;
+workflow-color-unactive = #c4c4c4;
+workflow-opacity-anchor = 0.3;
+z-index-toolbar = 22;
+z-index-endpoint-and-label = 21;
+z-index-node = 20;
+z-index-connector = 4;
