WIP: make tree nodes draggable and generate workflow nodes

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -1,5 +1,6 @@
 @import '_variables'; // preset variables including color, font, etc.
 @import '~antd/dist/antd.css'; // Ant Design
+@import '_partial/ant-cover';
 @import '_partial/layout';
 @import '_partial/table';
 @import '_partial/workflow';
