--- a/src/styles/_partial/workflow.styl
+++ b/src/styles/_partial/workflow.styl
@@ -6,7 +6,7 @@
     overflow-y: hidden;
   }
 
-  .workflow-brick {
+  .workflow-operator {
     flex: 1;
     min-width: 260px;
     border: 1px solid #eee;
