--- a/src/styles/_variables.styl
+++ b/src/styles/_variables.styl
@@ -3,6 +3,7 @@
 vendor-prefixes = webkit moz ms official;
 // Colors
 color-blue = #5C87FF;
+color-blue2 = #1890ff;
 color-background-dark = #001529;
 // Fonts
 font-family-default = PingFangSC-Regular, helvetica neue, hiragino sans gb, arial, microsoft yahei ui, microsoft yahei, simsun, sans-serif;
