WIP: update style of operator list

--- a/src/styles/_variables.styl
+++ b/src/styles/_variables.styl
@@ -5,6 +5,7 @@ vendor-prefixes = webkit moz ms official;
 color-blue = #5C87FF;
 color-blue2 = #1890ff;
 color-background-dark = #001529;
+color-font = rgba(0, 0, 0, 0.7);
 // Fonts
 font-family-default = PingFangSC-Regular, helvetica neue, hiragino sans gb, arial, microsoft yahei ui, microsoft yahei, simsun, sans-serif;
 font-family-code = Hack, source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
