--- a/src/styles/_partial/operator.styl
+++ b/src/styles/_partial/operator.styl
@@ -22,12 +22,13 @@
       align-items: center;
       font-size: 48px;
       height: 60px;
-      color: #00cdea;
+      // color: #00cdea;
       // border: 1px solid red;
     }
 
     .operator-text {
       // border: 1px solid green;
+      color: color-font;
       font-size: 12px;
     }
   }
