WIP: add operator detail

--- a/src/styles/_partial/table.styl
+++ b/src/styles/_partial/table.styl
@@ -1,8 +1,8 @@
-.table-toolbar {
+.main-toolbar {
   display: flex;
   margin-bottom: 20px;
 
-  .table-toolbar-right {
+  .main-toolbar-right {
     margin-left: auto;
   }
 
