--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -12,7 +12,7 @@ body {
   font-family: 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-button, input {
+button, input, textarea, label, .ant-select-selection {
   border-radius: 0 !important;
 
   &:focus {
