--- a/src/styles/_partial/operator.styl
+++ b/src/styles/_partial/operator.styl
@@ -14,7 +14,7 @@
     transition: transform 0.2s cubic-bezier(0.63, 0, 0.39, 0.99);
 
     &:hover {
-      transform: scale(1.1);
+      // transform: scale(1.1);
     }
 
     .operator-icon {
