WIP: add operator detail: input, output

--- a/src/styles/_partial/table.styl
+++ b/src/styles/_partial/table.styl
@@ -1,5 +1,6 @@
 .main-toolbar {
   display: flex;
+  align-items: center;
   margin-bottom: 20px;
 
   .main-toolbar-right {
@@ -7,7 +8,7 @@
   }
 
   button {
-    margin-right: 10px !important;
+    margin-right: 16px !important;
   }
 }
 
