WIP: add code editor

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -23,3 +23,17 @@ button, input, textarea, label, .ant-select-selection {
 .spin {
   margin: 30px;
 }
+
+#UNIQUE_ID_OF_ACE_EDITOR {
+  width: 100% !important;
+  border: 1px solid #d9d9d9;
+  font-size: 14px;
+
+  .ace_print-margin-layer {
+    display: none !important;
+  }
+
+  *, div {
+    font-family: font-family-code;
+  }
+}
