WIP: fix some bug of searching operators

--- a/src/styles/_partial/workflow.styl
+++ b/src/styles/_partial/workflow.styl
@@ -17,8 +17,10 @@
 
       .draggable-tree-node {
         cursor: move;
+      }
 
-        &:hover {
+      .ant-tree-node-content-wrapper {
+        &:hover .draggable-tree-node {
           position: relative;
           top: -2px;
           border: 2px solid color-blue;
@@ -54,7 +56,7 @@
 
   .workflow-conf {
     flex: 1;
-    // min-width: 260px
+    min-width: 200px;
     border: 1px solid #eee;
   }
 }
