--- a/src/styles/_partial/table.styl
+++ b/src/styles/_partial/table.styl
@@ -1,3 +1,12 @@
+.table-column-link {
+  color: color-blue2;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 .main-toolbar {
   display: flex;
   align-items: center;
