WIP: add the judgment of whether two endpoints can be connected

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -37,3 +37,13 @@ button, input, textarea, label, .ant-select-selection {
     font-family: font-family-code;
   }
 }
+
+.form-title {
+  font-weight: normal;
+  font-size: 30px;
+  margin: 16px 0 30px !important;
+}
+
+.form-btn {
+  margin-left: 10px;
+}
