WIP: implement save and run workflow

--- a/src/styles/_partial/operator.styl
+++ b/src/styles/_partial/operator.styl
@@ -28,6 +28,10 @@
 
     .operator-text {
       // border: 1px solid green;
+      max-width: 100px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
       color: color-font;
       font-size: 12px;
     }
