--- a/src/styles/_partial/workflow.styl
+++ b/src/styles/_partial/workflow.styl
@@ -56,7 +56,8 @@
 
   .workflow-conf {
     flex: 1;
-    padding: 10px;
+    padding: 20px;
+    max-width: 280px;
     min-width: 180px;
     border: 1px solid #eee;
   }
