--- a/src/styles/_partial/ant-cover.styl
+++ b/src/styles/_partial/ant-cover.styl
@@ -11,5 +11,9 @@
 }
 
 .ant-form-item {
-  margin-bottom: 14px !important;
+  margin-bottom: 12px;
+}
+
+.ant-input-disabled, .ant-select-disabled, .ant-menu-item-group-title {
+  color: #666 !important;
 }
