--- a/src/styles/_variables.styl
+++ b/src/styles/_variables.styl
@@ -20,6 +20,7 @@ z-index-header = 999;
 workflow-node-font-size = 16px;
 workflow-color-unactive = #c4c4c4;
 workflow-opacity-anchor = 0.3;
+z-index-sidebar = 999;
 z-index-toolbar = 22;
 z-index-endpoint-and-label = 21;
 z-index-node = 20;
