WIP: add instance detail

--- a/src/styles/_partial/workflow.styl
+++ b/src/styles/_partial/workflow.styl
@@ -61,6 +61,20 @@
     min-width: 180px;
     border: 1px solid #eee;
   }
+
+  .workflow-log {
+    flex: 1.5;
+    border: 1px solid #eee;
+    min-width: 280px;
+    max-width: 380px;
+    padding: 6px 10px;
+
+    .workflow-conf {
+      border: none;
+      padding: 10px;
+      max-width: 100%;
+    }
+  }
 }
 
 .workflow-node {
