--- a/src/styles/_partial/table.styl
+++ b/src/styles/_partial/table.styl
@@ -67,3 +67,11 @@
   margin-top: 6px;
   margin-bottom: 2px;
 }
+
+.table-column-desc {
+  display: block;
+  max-width: 300px !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
