--- a/src/styles/_partial/ant-cover.styl
+++ b/src/styles/_partial/ant-cover.styl
@@ -14,6 +14,6 @@
   margin-bottom: 12px;
 }
 
-.ant-input-disabled, .ant-select-disabled, .ant-menu-item-group-title {
+.ant-input-disabled, .ant-input-number-disabled, .ant-select-disabled, .ant-menu-item-group-title {
   color: #666 !important;
 }
