--- a/src/components/JSPlumb/Node/index.css
+++ b/src/components/JSPlumb/Node/index.css
@@ -87,12 +87,25 @@
 
 .node .node-status {
   position: absolute;
-  width: 22px;
-  height: 22px;
-  left: -20px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: -26px;
   top: 50%;
   margin-top: -10px;
-  /* color: red; */
+  color: #fff;
+  /* border: 1px solid #5C87FF; */
+}
+
+.node .node-status i {
+  /* display: inline-flex;
+   align-items: center;
+  justify-content: center;
+  border-radius: 2px;
+  width: 100%;
+  height: 100%; */
 }
 
 .node .jtk-endpoint {
