--- a/src/styles/_partial/workflow.styl
+++ b/src/styles/_partial/workflow.styl
@@ -49,7 +49,8 @@
         right: 10px;
         z-index: 1000;
         box-shadow: 0 3px 4px #dfe2e8;
-        // box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+        background-color: #fff;
+        white-space: nowrap;
       }
     }
   }
