--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -1,6 +1,7 @@
 @import '_variables'; // preset variables including color, font, etc.
 @import '~antd/dist/antd.css'; // Ant Design
 @import '_partial/ant-cover';
+@import '_partial/split-panel';
 @import '_partial/operator';
 @import '_partial/layout';
 @import '_partial/table';
