--- a/src/styles/_partial/ant-cover.styl
+++ b/src/styles/_partial/ant-cover.styl
@@ -17,3 +17,11 @@
 .ant-input-disabled, .ant-input-number-disabled, .ant-select-disabled, .ant-menu-item-group-title {
   color: #666 !important;
 }
+
+.ant-drawer-body {
+  height: calc(100vh - 55px);
+}
+
+.ant-descriptions-view {
+  border-radius: 0;
+}
