--- a/src/styles/_partial/workflow.styl
+++ b/src/styles/_partial/workflow.styl
@@ -70,7 +70,7 @@
     height: 100%;
     border: 1px solid #eee;
     min-width: 280px;
-    // max-width: 380px;
+    max-width: 380px;
     padding: 6px 10px;
 
     .workflow-conf {
