--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -1,7 +1,6 @@
 @import '_variables'; // preset variables including color, font, etc.
 @import '~antd/dist/antd.css'; // Ant Design
 @import '_partial/ant-cover';
-@import '_partial/split-panel';
 @import '_partial/operator';
 @import '_partial/layout';
 @import '_partial/table';
@@ -47,4 +46,13 @@ button, input, .ant-input-number, textarea, label, .ant-select-selection, .ant-m
 
 .form-btn {
   margin-left: 10px;
+}
+
+.drawer-log {
+  background: #000;
+  color: #fff;
+  height: 100%;
+  word-break: break-all;
+  white-space: pre-wrap;
+  padding: 10px;
 }
