WIP: add timed tasks

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -12,7 +12,7 @@ body {
   font-family: 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-button, input, .ant-input-number, textarea, label, .ant-select-selection, .ant-modal-content {
+button, input, .ant-input-number, textarea, label, .ant-select-selection, .ant-modal-content, .ant-input-group-addon {
   border-radius: 0 !important;
 
   &:focus {
@@ -51,4 +51,6 @@ button, input, .ant-input-number, textarea, label, .ant-select-selection, .ant-m
 .drawer-log {
   height: 100%;
   padding: 10px;
+  font-size: 13px !important;
+  line-height: 1.4 !important;
 }
